--- a/sdk/keyvault/keyvault-common/package.json
+++ b/sdk/keyvault/keyvault-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/keyvault-common",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Common internal functionality for all of the Azure Key Vault clients in the Azure SDK for JavaScript",
   "sdk-type": "client",
   "author": "Microsoft Corporation",
@@ -59,7 +59,8 @@
     "@azure/core-auth": "^1.3.0",
     "@azure/abort-controller": "^2.0.0",
     "@azure/logger": "^1.1.5",
-    "tslib": "^2.2.0"
+    "tslib": "^2.2.0",
+    "@azure/core-util": "^1.10.1"
   },
   "devDependencies": {
     "@azure-tools/test-utils-vitest": "^1.0.0",
