--- a/sdk/maps/maps-render-rest/package.json
+++ b/sdk/maps/maps-render-rest/package.json
@@ -65,6 +65,7 @@
     "@azure-rest/core-client": "^1.0.0",
     "@azure/core-rest-pipeline": "^1.8.0",
     "@azure/maps-common": "1.0.0-beta.2",
+    "@azure/logger": "^1.0.0",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
