--- a/sdk/openai/openai/tsconfig.json
+++ b/sdk/openai/openai/tsconfig.json
@@ -6,8 +6,7 @@
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "rootDir": ".",
-    "lib": ["dom"]
+    "rootDir": "."
   },
   "exclude": ["./samples/**/*.ts"],
   "include": [
