--- a/sdk/openai/openai/tests.yml
+++ b/sdk/openai/openai/tests.yml
@@ -20,3 +20,4 @@ extends:
       ACCOUNT_NAME_COMPLETIONS: $(ACCOUNT-NAME-EASTUS)
       ACCOUNT_NAME_AUDIO: $(ACCOUNT-NAME-NORTHCENTRALUS)
       ACCOUNT_NAME_VISION: $(ACCOUNT-NAME-SWEDEN-CENTRAL)
+      AZURE_LOG_LEVEL: "verbose"
