--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -917,6 +917,9 @@ sdk/ai/ai-inference-rest @glharper @dargilco @jhakulin
 /sdk/trafficmanager/arm-trafficmanager/ @qiaozha @MaryGao
 
 # PRLabel: %Mgmt
+/sdk/trustedsigning/arm-trustedsigning/ @qiaozha @MaryGao
+
+# PRLabel: %Mgmt
 /sdk/visualstudio/arm-visualstudio/ @qiaozha @MaryGao
 
 # PRLabel: %Mgmt
