--- a/sdk/maps/maps-route-rest/samples/v1-beta/javascript/package.json
+++ b/sdk/maps/maps-route-rest/samples/v1-beta/javascript/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@azure-rest/maps-route": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.0.1"
+    "@azure/identity": "^4.0.1",
+    "tslib": "^2.4.0"
   }
 }
