--- a/sdk/maps/maps-route-rest/samples/v1-beta/typescript/package.json
+++ b/sdk/maps/maps-route-rest/samples/v1-beta/typescript/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@azure-rest/maps-route": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.0.1"
+    "@azure/identity": "^4.0.1",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
