--- a/sdk/purview/purview-administration-rest/samples/v1-beta/javascript/package.json
+++ b/sdk/purview/purview-administration-rest/samples/v1-beta/javascript/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@azure-samples/purview-administration-js",
+  "name": "@azure-samples/purview-administration-js-beta",
   "private": true,
   "version": "1.0.0",
-  "description": "Azure Purview Administration rest client library samples for JavaScript",
+  "description": "Azure Purview Administration rest client library samples for JavaScript (Beta)",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -28,6 +28,6 @@
   "dependencies": {
     "@azure-rest/purview-administration": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.2.1"
+    "@azure/identity": "^4.0.1"
   }
 }
