--- a/sdk/purview/purview-administration-rest/samples/v1-beta/typescript/package.json
+++ b/sdk/purview/purview-administration-rest/samples/v1-beta/typescript/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@azure-samples/purview-administration-ts",
+  "name": "@azure-samples/purview-administration-ts-beta",
   "private": true,
   "version": "1.0.0",
-  "description": "Azure Purview Administration rest client library samples for TypeScript",
+  "description": "Azure Purview Administration rest client library samples for TypeScript (Beta)",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -32,9 +32,10 @@
   "dependencies": {
     "@azure-rest/purview-administration": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.2.1"
+    "@azure/identity": "^4.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "typescript": "~5.6.2",
     "rimraf": "latest"
   }
