--- a/sdk/communication/communication-messages-rest/package.json
+++ b/sdk/communication/communication-messages-rest/package.json
@@ -4,14 +4,7 @@
   "author": "Microsoft Corporation",
   "version": "1.1.0-beta.1",
   "description": "Azure client library for Azure Communication Messages services",
-  "keywords": [
-    "node",
-    "azure",
-    "cloud",
-    "typescript",
-    "browser",
-    "isomorphic"
-  ],
+  "keywords": ["node", "azure", "cloud", "typescript", "browser", "isomorphic"],
   "license": "MIT",
   "main": "dist/index.js",
   "module": "./dist-esm/src/index.js",
@@ -61,9 +54,9 @@
   "sideEffects": false,
   "autoPublish": false,
   "dependencies": {
-    "@azure-rest/core-client": "^1.1.6",
+    "@azure-rest/core-client": "^1.4.0",
     "@azure/communication-common": "^2.2.0",
-    "@azure/core-auth": "^1.3.0",
+    "@azure/core-auth": "^1.6.0",
     "@azure/core-paging": "^1.5.0",
     "@azure/core-rest-pipeline": "^1.12.0",
     "@azure/core-util": "^1.7.0",
@@ -117,9 +110,6 @@
   },
   "//sampleConfiguration": {
     "productName": "Azure client library for Azure Communication Messages Services",
-    "productSlugs": [
-      "azure",
-      "azure-communication-services"
-    ]
+    "productSlugs": ["azure", "azure-communication-services"]
   }
 }
