--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -15,19 +15,10 @@ steps:
     inputs:
       targetType: 'filePath'
       filePath: eng/scripts/spell-check-public-apis.ps1
-      arguments: -DiffJsonFile $(Build.ArtifactStagingDirectory)/diff/diff.json
+      arguments: -ChangedServices $(ChangedServices)
       pwsh: true
     displayName: Spell check public API for PR
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
-
-  - task: PowerShell@2
-    inputs:
-      targetType: 'filePath'
-      filePath: eng/scripts/spell-check-public-api.ps1
-      arguments: -ServiceDirectory $(ChangedServices)
-      pwsh: true
-    displayName: Spell check public APIs
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
   - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml
     parameters:
