--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -19,7 +19,7 @@ steps:
     inputs:
       targetType: 'filePath'
       filePath: eng/scripts/spell-check-public-apis.ps1
-      arguments: -ChangedServices $(ChangedServices)
+      arguments: -ChangedServices "$(ChangedServices)"
       pwsh: true
     displayName: Spell check public API
 
