--- a/sdk/communication/communication-common/package.json
+++ b/sdk/communication/communication-common/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@azure/abort-controller": "^2.0.0",
     "@azure/core-auth": "^1.3.0",
+    "@azure-rest/core-client": "^2.1.0",
     "@azure/core-rest-pipeline": "^1.3.2",
     "@azure/core-tracing": "^1.0.0",
     "@azure/core-util": "^1.0.0",
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@azure/dev-tool": "^1.0.0",
+    "@azure/identity": "~4.3.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@microsoft/api-extractor": "^7.31.1",
     "@types/chai": "^4.1.6",
@@ -96,6 +98,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.8",
     "mocha": "^10.0.0",
+    "nock": "14.0.0-beta.7",
     "mockdate": "^3.0.5",
     "nyc": "^17.0.0",
     "rimraf": "^5.0.5",
