--- a/sdk/monitor/monitor-opentelemetry-exporter/tsconfig.json
+++ b/sdk/monitor/monitor-opentelemetry-exporter/tsconfig.json
@@ -2,11 +2,19 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure/monitor-opentelemetry-exporter": ["./src/index"]
+      "@azure/monitor-opentelemetry-exporter": [
+        "./src/index"
+      ]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
