Review feedback: keep azure-identity-vscode unpublished

--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -34,3 +34,4 @@ extends:
         safeName: azureidentitybroker
       - name: azure-identity-vscode
         safeName: azureidentityvscode
+        skipPublishDocMs: true
