--- a/sdk/keyvault/keyvault-admin/package.json
+++ b/sdk/keyvault/keyvault-admin/package.json
@@ -121,7 +121,8 @@
     "playwright": "^1.46.0",
     "rimraf": "^5.0.5",
     "typescript": "~5.6.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "zx": "^8.1.9"
   },
   "type": "module",
   "tshy": {
