--- a/sdk/maps/maps-timezone-rest/package.json
+++ b/sdk/maps/maps-timezone-rest/package.json
@@ -3,7 +3,7 @@
   "sdk-type": "client",
   "author": "Microsoft Corporation",
   "version": "1.0.0-beta.1",
-  "description": "A generated SDK for MapsTimezoneClient.",
+  "description": "A generated SDK for MapsTimeZoneClient.",
   "keywords": ["node", "azure", "cloud", "typescript", "browser", "isomorphic"],
   "license": "MIT",
   "main": "dist/index.js",
