--- a/sdk/maps/maps-timezone-rest/package.json
+++ b/sdk/maps/maps-timezone-rest/package.json
@@ -78,7 +78,7 @@
     "@microsoft/api-extractor": "^7.31.1",
     "@types/chai": "^4.2.8",
     "@types/mocha": "^10.0.7",
-    "@types/node": "^14.0.0",
+    "@types/node": "~22.7.6",
     "autorest": "latest",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
