--- a/sdk/databoundaries/arm-databoundaries/package.json
+++ b/sdk/databoundaries/arm-databoundaries/package.json
@@ -2,7 +2,7 @@
   "name": "@azure/arm-databoundaries",
   "sdk-type": "mgmt",
   "author": "Microsoft Corporation",
-  "description": "A generated SDK for DataBoundary.",
+  "description": "A generated SDK for DataboundariesManegementClient.",
   "version": "1.0.0-beta.1",
   "engines": {
     "node": ">=18.0.0"
@@ -25,8 +25,11 @@
   "module": "./dist-esm/src/index.js",
   "types": "./types/arm-databoundaries.d.ts",
   "devDependencies": {
-    "typescript": "~5.6.2",
+    "@microsoft/api-extractor": "^7.31.1",
+    "mkdirp": "^3.0.1",
+    "typescript": "~5.5.3",
     "uglify-js": "^3.4.9",
+    "rimraf": "^5.0.0",
     "dotenv": "^16.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/identity": "^4.2.1",
@@ -66,13 +69,13 @@
     "types/*"
   ],
   "scripts": {
-    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && dev-tool run vendored mkdirp ./review && npm run extract-api",
+    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && mkdirp ./review && npm run extract-api",
     "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
     "prepack": "npm run build",
     "pack": "npm pack 2>&1",
     "extract-api": "dev-tool run extract-api",
     "lint": "echo skipped",
-    "clean": "dev-tool run vendored rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
+    "clean": "rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
     "build:node": "echo skipped",
     "build:browser": "echo skipped",
     "build:test": "echo skipped",
@@ -94,7 +97,7 @@
   "//metadata": {
     "constantPaths": [
       {
-        "path": "src/dataBoundary.ts",
+        "path": "src/databoundariesManegementClient.ts",
         "prefix": "packageDetails"
       }
     ]
