--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -75,20 +75,18 @@ jobs:
           MatrixFilters: ${{ parameters.MatrixFilters }}
           MatrixReplace: ${{ parameters.MatrixReplace }}
           SparseCheckoutPaths: [ "sdk/", ".vscode"]
-          PreGenerationSteps:
-            - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
-              parameters:
-                ServiceDirectory: ${{parameters.ServiceDirectory}}
+          ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
+            EnablePRGeneration: true
+            PRMatrix:
+              Name: pr_test_base
+              Path: eng/pipelines/templates/stages/platform-matrix.json
+              Setting: ArtifactPackageNames
 
-            - task: Powershell@2
-              inputs:
-                pwsh: true
-                filePath: eng/scripts/distribute-packages-to-matrix.ps1
-                arguments: >-
-                  -PackageInfoFolder "$(Build.ArtifactStagingDirectory)/PackageInfo"
-                  -PlatformMatrix "${{ parameters.MatrixConfigs[0].Path }}"
-              displayName: 'Distribute Packages to Matrix'
-              condition: and(eq(variables['Build.Reason'], 'PullRequest'), eq('${{ parameters.ServiceDirectory }}','auto'))
+            PreGenerationSteps:
+              - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
+                parameters:
+                  ServiceDirectory: ${{parameters.ServiceDirectory}}
+
           CloudConfig:
             Cloud: Public
           AdditionalParameters:
