--- a/sdk/kubernetesruntime/arm-containerorchestratorruntime/package.json
+++ b/sdk/kubernetesruntime/arm-containerorchestratorruntime/package.json
@@ -56,30 +56,29 @@
     ]
   },
   "dependencies": {
-    "@azure/core-util": "^1.9.2",
-    "@azure-rest/core-client": "^2.1.0",
-    "@azure/core-auth": "^1.6.0",
-    "@azure/core-rest-pipeline": "^1.5.0",
-    "@azure/logger": "^1.0.0",
-    "tslib": "^2.6.2",
-    "@azure/core-lro": "^3.1.0",
-    "@azure/abort-controller": "^2.1.2"
+    "@azure/abort-controller": "workspace:*",
+    "@azure/core-auth": "workspace:*",
+    "@azure/core-lro": "workspace:*",
+    "@azure/core-rest-pipeline": "workspace:*",
+    "@azure/core-util": "workspace:*",
+    "@azure/logger": "workspace:*",
+    "@azure-rest/core-client": "workspace:*",
+    "tslib": "catalog:"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "@types/node": "^18.0.0",
-    "eslint": "^8.55.0",
-    "typescript": "~5.6.2",
-    "tshy": "^1.11.1",
-    "@azure/identity": "^4.2.1",
-    "@vitest/browser": "^2.0.5",
-    "@vitest/coverage-istanbul": "^2.0.5",
-    "playwright": "^1.41.2",
-    "vitest": "^2.0.5",
-    "@azure-tools/test-credential": "^2.0.0",
-    "@azure-tools/test-recorder": "^4.0.0",
-    "@azure/dev-tool": "^1.0.0",
-    "@azure/eslint-plugin-azure-sdk": "^3.0.0"
+    "@azure/dev-tool": "workspace:*",
+    "@azure/eslint-plugin-azure-sdk": "workspace:*",
+    "@azure/identity": "catalog:internal",
+    "@azure-tools/test-credential": "workspace:*",
+    "@azure-tools/test-recorder": "workspace:*",
+    "@types/node": "catalog:",
+    "@vitest/browser": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
+    "dotenv": "catalog:",
+    "eslint": "catalog:",
+    "typescript": "catalog:",
+    "playwright": "catalog:",
+    "vitest": "catalog:"
   },
   "scripts": {
     "clean": "dev-tool run vendored rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
