--- a/sdk/monitor/monitor-query/package.json
+++ b/sdk/monitor/monitor-query/package.json
@@ -47,12 +47,12 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "npm run clean && tsc -p . && npm run build:nodebrowser && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
-    "build:node": "tsc -p . && dev-tool run bundle",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
+    "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:nodebrowser": "dev-tool run bundle",
     "build:samples": "dev-tool samples publish --force",
-    "build:test": "tsc -p . && dev-tool run bundle",
+    "build:test": "dev-tool run build-package && dev-tool run bundle",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../prettier.config.cjs --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* temp types *.tgz *.log coverage coverage-browser",
     "execute:samples": "echo Obsolete",
